<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true"
        android:scrollbars="none">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            tools:context=".view.login.LoginFragment">

            <TextView
                android:id="@+id/title_textView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_100sdp"
                android:text="@string/chat_app"
                android:textSize="@dimen/_20sdp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/subtitle_textView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/reliable_and_fast"
                android:textSize="18sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="@+id/title_textView"
                app:layout_constraintHorizontal_bias="1.0"
                app:layout_constraintStart_toStartOf="@+id/title_textView"
                app:layout_constraintTop_toBottomOf="@+id/title_textView" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/firstName_inputLayout"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="32dp"
                android:layout_marginTop="100dp"
                android:layout_marginEnd="32dp"
                android:hint="@string/first_name"
                app:counterEnabled="true"
                app:counterMaxLength="20"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/title_textView">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/firstName_editText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="text"
                    android:maxLength="20" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/username_inputLayout"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="32dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="32dp"
                android:hint="@string/username"
                app:counterEnabled="true"
                app:counterMaxLength="20"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/firstName_inputLayout">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/username_editText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="text"
                    android:maxLength="20" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.button.MaterialButton
                android:id="@+id/button_go"
                android:layout_width="0dp"
                android:layout_height="60dp"
                android:layout_marginTop="8dp"
                android:backgroundTint="@color/color_primary"
                android:text="@string/go"
                android:textColor="@color/white"
                app:layout_constraintEnd_toEndOf="@+id/username_inputLayout"
                app:layout_constraintStart_toStartOf="@+id/username_inputLayout"
                app:layout_constraintTop_toBottomOf="@+id/username_inputLayout" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.core.widget.NestedScrollView>
</layout>